image: add initial chai-image
Signed-off-by: Andreas Rehn <rehn.andreas86@gmail.com>

--- a/conf/variant/licheepizero-dock/local.conf.sample
+++ b/conf/variant/licheepizero-dock/local.conf.sample
@@ -1,4 +1,6 @@
 MACHINE = "licheepizero-dock"
 
+MACHINE_FEATURES_remove = " apm"
+
 #DL_DIR ?= "${HOME}/yocto/downloads"
 #SSTATE_DIR ?= "${HOME}/yocto/sstate"
