--- a/conf/variant/common/bblayers.conf
+++ b/conf/variant/common/bblayers.conf
@@ -9,4 +9,5 @@ BBLAYERS ?= " \
   ${BSPDIR}/sources/meta-openembedded/meta-networking \
   ${BSPDIR}/sources/meta-openembedded/meta-python \
   ${BSPDIR}/sources/meta-qt5 \
+  ${BSPDIR}/sources/meta-chai \
   "
