--- a/conf/variant/licheepizero/local.conf.sample
+++ b/conf/variant/licheepizero/local.conf.sample
@@ -1,4 +1,6 @@
 MACHINE = "licheepizero"
 
+MACHINE_FEATURES_remove = " apm"
+
 #DL_DIR ?= "${HOME}/yocto/downloads"
 #SSTATE_DIR ?= "${HOME}/yocto/sstate"
