kernel: use linux-stable 5.10
TODO:
- fix shutdown
- port zero-dock device-tree

Signed-off-by: Andreas Rehn <rehn.andreas86@gmail.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,3 +11,5 @@ BBFILE_PATTERN_meta-chai = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-chai = "11"
 
 LAYERSERIES_COMPAT_meta-chai = "dunfell"
+
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-stable"
