--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -13,3 +13,5 @@ BBFILE_PRIORITY_meta-chai = "11"
 LAYERSERIES_COMPAT_meta-chai = "dunfell"
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-stable"
+
+PREFERRED_PROVIDER_u-boot-mainline ?= "2021.04"
