--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -15,3 +15,4 @@ LAYERSERIES_COMPAT_meta-chai = "dunfell"
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-stable"
 
 PREFERRED_PROVIDER_u-boot-mainline ?= "2021.04"
+KERNEL_IMAGETYPE ?= "zImage"
