--- a/recipes-bsp/u-boot/files/sun8i/nor-flash.cfg
+++ b/recipes-bsp/u-boot/files/sun8i/nor-flash.cfg
@@ -4,7 +4,6 @@ CONFIG_SPI_FLASH_GIGADEVICE=y
 
 CONFIG_CMD_SPI=y
 CONFIG_CMD_SF=y
-CONFIG_SPI=y
 CONFIG_DM_SPI=y
 CONFIG_SPI_SUNXI=y
 
@@ -19,3 +18,20 @@ CONFIG_MTD_PARTITIONS=y
 CONFIG_MTD_DEVICE=y
 CONFIG_CMD_UBIFS=y
 CONFIG_MTD_CMDLINE_PARTS=y
+
+CONFIG_SPL_MTD_SUPPORT=y
+CONFIG_SPL_SPI_SUNXI=y
+
+CONFIG_MTDIDS_DEFAULT="nor0=spi-flash"
+# TODO: partitioning
+CONFIG_MTDPARTS_DEFAULT="mtdparts=spi-flash:800k(uboot),32k(env),64k(dtb),5000k(kernel),-(rootfs)"
+CONFIG_HAVE_BLOCK_DEVICE=y
+CONFIG_BOOTDELAY=2
+CONFIG_USE_BOOTCOMMAND=y
+# TODO: partitioning
+CONFIG_BOOTCOMMAND="setenv bootargs console=ttyS0,115200 panic=5 rootwait mtdparts=spi-flash:800k(uboot),32k(env),64k(dtb),5000k(kernel),-(rootfs) root=31:03 rw rootfstype=jffs2; sf probe 0 50000000; sf read 0x43000000 0x0e0000 0x010000; sf read 0x42000000 0x100000 0x4e2000; bootz 0x42000000 - 0x43000000"
+
+CONFIG_SUNXI_SPI=y
+SPL_SPI_FLASH_MTD=y
+
+CONFIG_ENV_VARS_UBOOT_CONFIG=y
