--- a/conf/variant/licheepizero-dock/bblayers.conf.sample
+++ b/conf/variant/licheepizero-dock/bblayers.conf.sample
@@ -5,5 +5,6 @@ BBPATH := "${TOPDIR}:${BSPDIR}/sources/meta-chai/"
 require conf/variant/common/bblayers.conf
 
 BBLAYERS += " \
+    ${BSPDIR}/sources/meta-qt5 \
     ${BSPDIR}/sources/meta-licheepizero \
 "
