u-boot: fix mmc booting
if CONFIG_BOOTCOMMAND is enabled,  booting from mmc isn't working
booting from mmc with different partions requires additonal CONFIGs
add README.md

Signed-off-by: Andreas Rehn <rehn.andreas86@gmail.com>

--- a/recipes-bsp/u-boot/files/sun8i/nor-flash.cfg
+++ b/recipes-bsp/u-boot/files/sun8i/nor-flash.cfg
@@ -26,12 +26,13 @@ CONFIG_MTDIDS_DEFAULT="nor0=spi-flash"
 # TODO: partitioning
 CONFIG_MTDPARTS_DEFAULT="mtdparts=spi-flash:800k(uboot),32k(env),64k(dtb),5000k(kernel),-(rootfs)"
 CONFIG_HAVE_BLOCK_DEVICE=y
-CONFIG_BOOTDELAY=2
-CONFIG_USE_BOOTCOMMAND=y
+# TODO: enable bootcommand for nor-flash loading until boot cmd not working as expected
+# CONFIG_BOOTDELAY=2
+# CONFIG_USE_BOOTCOMMAND=y
 # TODO: partitioning
-CONFIG_BOOTCOMMAND="setenv bootargs console=ttyS0,115200 panic=5 rootwait mtdparts=spi-flash:800k(uboot),32k(env),64k(dtb),5000k(kernel),-(rootfs) root=31:03 rw rootfstype=jffs2; sf probe 0 50000000; sf read 0x43000000 0x0e0000 0x010000; sf read 0x42000000 0x100000 0x4e2000; bootz 0x42000000 - 0x43000000"
+# CONFIG_BOOTCOMMAND="setenv bootargs console=ttyS0,115200 panic=5 rootwait mtdparts=spi-flash:800k(uboot),32k(env),64k(dtb),5000k(kernel),-(rootfs) root=31:03 rw rootfstype=jffs2; sf probe 0 50000000; sf read 0x43000000 0x0e0000 0x010000; sf read 0x42000000 0x100000 0x4e2000; bootz 0x42000000 - 0x43000000"
 
 CONFIG_SUNXI_SPI=y
 SPL_SPI_FLASH_MTD=y
 
-CONFIG_ENV_VARS_UBOOT_CONFIG=y
+# CONFIG_ENV_VARS_UBOOT_CONFIG=y
