--- a/recipes-bsp/u-boot/files/sun8i/reduce-size.cfg
+++ b/recipes-bsp/u-boot/files/sun8i/reduce-size.cfg
@@ -6,19 +6,19 @@
 #ignore # CONFIG_NET is not set
 
 # CONFIG_CMD_UBIFS is not set
-# CONFIG_PARTITIONS is not set
+#ignore # CONFIG_PARTITIONS is not set
 
 # CONFIG_CMD_ELF is not set
 # CONFIG_CMD_CRC32 is not set
 #ignore # CONFIG_CMD_FLASH is not set
-# CONFIG_CMD_GPT is not set
-# CONFIG_CMD_LOADB is not set
+#ignore # CONFIG_CMD_GPT is not set
+#ignore # CONFIG_CMD_LOADB is not set
 # CONFIG_CMD_PINMUX is not set
 # CONFIG_SYS_LONGHELP is not set
 # CONFIG_CMD_BDI is not set
-# CONFIG_CMD_CONSOLE is not set
+#ignore # CONFIG_CMD_CONSOLE is not set
 # CONFIG_SPL_POWER_SUPPORT is not set
-# CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR is not set
+#ignore # CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR is not set
 # CONFIG_FIT is not set
 # CONFIG_DISTRO_DEFAULTS is not set
 # CONFIG_VIDEO_SUNXI is not set
