--- a/recipes-bsp/u-boot/files/sun8i/nor-flash.cfg
+++ b/recipes-bsp/u-boot/files/sun8i/nor-flash.cfg
@@ -19,6 +19,10 @@ CONFIG_MTD_DEVICE=y
 CONFIG_CMD_UBIFS=y
 CONFIG_MTD_CMDLINE_PARTS=y
 
+# kernel device tree patching
+#ignore CONFIG_OF_LIBFDT=y
+#ignoreCONFIG_FDT_FIXUP_PARTITIONS=y
+
 CONFIG_SPL_MTD_SUPPORT=y
 CONFIG_SPL_SPI_SUNXI=y
 
@@ -30,7 +34,8 @@ CONFIG_HAVE_BLOCK_DEVICE=y
 # CONFIG_BOOTDELAY=2
 # CONFIG_USE_BOOTCOMMAND=y
 # TODO: partitioning
-# CONFIG_BOOTCOMMAND="setenv bootargs console=ttyS0,115200 panic=5 rootwait mtdparts=spi-flash:800k(uboot),32k(env),64k(dtb),5000k(kernel),-(rootfs) root=31:03 rw rootfstype=jffs2; sf probe 0 50000000; sf read 0x43000000 0x0e0000 0x010000; sf read 0x42000000 0x100000 0x4e2000; bootz 0x42000000 - 0x43000000"
+# CONFIG_BOOTCOMMAND="setenv bootargs console=ttyS0,115200 panic=5 rootwait mtdparts=spi-flash:800k(uboot),32k(env),64k(dtb),5000k(kernel),-(rootfs) root=ubi0:rootfs rw rootfstype=ubifs ubi.mtd=5; sf probe 0 50000000; sf read 0x43000000 0x0e0000 0x010000; sf read 0x42000000 0x100000 0x4e2000; bootz 0x42000000 - 0x43000000"
+# CONFIG_BOOTCOMMAND="setenv bootargs console=ttyS0,115200 panic=5 rootwait mtdparts=spi-flash:800k(uboot),32k(env),64k(dtb),5000k(kernel),-(rootfs) rootfstype=jffs2 root=/dev/mtd5 rw; sf probe 0 50000000; sf read 0x43000000 0x0e0000 0x010000; sf read 0x42000000 0x100000 0x4e2000; bootz 0x42000000 - 0x43000000"
 
 CONFIG_SUNXI_SPI=y
 SPL_SPI_FLASH_MTD=y
