linux-stable: fix fragments
when using defconfig, fragment merge works only with a workaround.

Signed-off-by: Andreas Rehn <rehn.andreas86@gmail.com>

--- a/conf/variant/licheepizero/local.conf.sample
+++ b/conf/variant/licheepizero/local.conf.sample
@@ -1,6 +1,7 @@
 MACHINE = "licheepizero"
 
 MACHINE_FEATURES_remove = " apm"
+MACHINE_FEATURES_append = " touchscreen"
 
 #DL_DIR ?= "${HOME}/yocto/downloads"
 #SSTATE_DIR ?= "${HOME}/yocto/sstate"
