--- a/conf/variant/licheepizero-dock/local.conf.sample
+++ b/conf/variant/licheepizero-dock/local.conf.sample
@@ -1,6 +1,7 @@
 MACHINE = "licheepizero-dock"
 
 MACHINE_FEATURES_remove = " apm"
+MACHINE_FEATURES_append = " touchscreen"
 
 #DL_DIR ?= "${HOME}/yocto/downloads"
 #SSTATE_DIR ?= "${HOME}/yocto/sstate"
