--- a/conf/variant/licheepizero/bblayers.conf.sample
+++ b/conf/variant/licheepizero/bblayers.conf.sample
@@ -6,5 +6,5 @@ require conf/variant/common/bblayers.conf
 
 BBLAYERS += " \
     ${BSPDIR}/sources/meta-qt5 \
-    ${BSPDIR}/sources/meta-licheepizero \
+    ${BSPDIR}/sources/meta-sunxi \
 "
